Page update Color contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -49,7 +49,6 @@ nav, p, section, article {
 .container3 {
   display: flex;
    justify-content: space-around;
-
 }
 .hero {
   position: relative;
@@ -370,3 +369,8 @@ th {
 .trip-cta h4 {
   margin-bottom: 10px;
 }
+ h1, h2, h3, h4, h5, h6, p, a, button {
+  color: #fff !important;
+  background-color: #264653 !important;
+}
+
